// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OakDownloadCard matches snapshot with fileSizeSlot 1`] = `
.c0 {
  overflow: hidden;
  width: 100%;
  color: #222222;
  background: #ffffff;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: -0.005rem;
}

.c13 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: -0.005rem;
}

.c14 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c16 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c20 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c22 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: stretch;
  flex-grow: 1;
}

.c7 {
  display: flex;
  align-items: center;
  align-self: stretch;
}

.c11 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
  gap: 0.25rem;
}

.c15 {
  display: flex;
  align-items: center;
}

.c17 {
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c17:checked {
  background: #222222;
  border-color: #222222;
}

.c17:disabled {
  pointer-events: none;
}

.c19:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255, 229, 85, 100%);
}

.c9 {
  object-fit: contain;
}

.c23 {
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c21 {
  pointer-events: none;
  opacity: 0;
}

input:checked+.c21 {
  opacity: 1;
}

.c3 {
  flex: 1;
  cursor: pointer;
  display: flex;
}

.c2 {
  cursor: pointer;
}

.c2:has(input:focus-within):focus-visible {
  box-shadow: 0px 0px 0px 2px #ffe555,0px 0px 0px 5px #575757;
}

@media (hover: hover) {
  .c17:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover: hover) {
  .c18:hover:not(.c18:checked):not(.c18:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    transform: translate(-50%, -50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover: hover) {
  .c2:hover:not(:disabled, :active) {
    background: #f2f2f2;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <span
            class="c8"
          >
            <img
              alt=""
              class="c9"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </span>
        </div>
        <div
          class="c10 c11"
        >
          <div
            class="c12"
          >
            TITLE
          </div>
          <div
            class="c13"
          >
            FILE_SIZE
          </div>
          <div
            class="c13"
          >
            FORMAT
          </div>
        </div>
      </div>
      <div
        class="c4 c1"
      >
        <div
          class="c14 c15"
        >
          <div
            class="c16"
          >
            <input
              class="c17 c18 c19"
              id="checkbox-1"
              name="default"
              type="checkbox"
              value="Option 1"
            />
            <div
              class="c20 c21"
            >
              <span
                class="c22"
              >
                <img
                  alt=""
                  class="c23"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`OakDownloadCard matches snapshot without fileSizeSlot 1`] = `
.c0 {
  overflow: hidden;
  width: 100%;
  color: #222222;
  background: #ffffff;
  border: 0.125rem solid;
  border-radius: 0.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
  overflow: hidden;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  padding: 0.75rem;
  background: #ffe555;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c8 {
  position: relative;
  width: 3rem;
  min-width: 3rem;
  height: 3rem;
  min-height: 3rem;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c12 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.5rem;
  letter-spacing: -0.005rem;
}

.c13 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: -0.005rem;
}

.c14 {
  padding-right: 1rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c16 {
  position: relative;
  width: 1.5rem;
  height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c20 {
  position: absolute;
  top: 0rem;
  left: 0rem;
  width: 1.5rem;
  height: 1.5rem;
  padding: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c22 {
  position: relative;
  width: 100%;
  min-width: 100%;
  height: 100%;
  min-height: 100%;
  display: block;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c1 {
  display: flex;
}

.c5 {
  display: flex;
  align-items: stretch;
  flex-grow: 1;
}

.c7 {
  display: flex;
  align-items: center;
  align-self: stretch;
}

.c11 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
  gap: 0.25rem;
}

.c15 {
  display: flex;
  align-items: center;
}

.c17 {
  -webkit-appearance: none;
  appearance: none;
  cursor: pointer;
  margin: 0;
  outline: none;
  border: 0.125rem solid;
  border-color: #222222;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  border-color: #808080;
}

.c17:checked {
  background: #222222;
  border-color: #222222;
}

.c17:disabled {
  pointer-events: none;
}

.c19:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255, 229, 85, 100%);
}

.c9 {
  object-fit: contain;
}

.c23 {
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  object-fit: contain;
}

.c21 {
  pointer-events: none;
  opacity: 0;
}

input:checked+.c21 {
  opacity: 1;
}

.c3 {
  flex: 1;
  cursor: pointer;
  display: flex;
}

.c2 {
  cursor: pointer;
}

.c2:has(input:focus-within):focus-visible {
  box-shadow: 0px 0px 0px 2px #ffe555,0px 0px 0px 5px #575757;
}

@media (hover: hover) {
  .c17:hover:not(:disabled) {
    border-color: #222222;
  }
}

@media (hover: hover) {
  .c18:hover:not(.c18:checked):not(.c18:disabled)::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    width: 60%;
    height: 60%;
    transform: translate(-50%, -50%);
    border-radius: 0.125rem;
    background: #222222;
  }
}

@media (hover: hover) {
  .c2:hover:not(:disabled, :active) {
    background: #f2f2f2;
  }
}

<div>
  <div
    class="c0 c1 c2"
  >
    <label
      class="c3"
    >
      <div
        class="c4 c5"
      >
        <div
          class="c6 c7"
        >
          <span
            class="c8"
          >
            <img
              alt=""
              class="c9"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699953657/icons/hz4l3iq6i68kazvkvorq.svg"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
          </span>
        </div>
        <div
          class="c10 c11"
        >
          <div
            class="c12"
          >
            TITLE
          </div>
          <div
            class="c13"
          >
            FORMAT
          </div>
        </div>
      </div>
      <div
        class="c4 c1"
      >
        <div
          class="c14 c15"
        >
          <div
            class="c16"
          >
            <input
              class="c17 c18 c19"
              id="checkbox-1"
              name="default"
              type="checkbox"
              value="Option 1"
            />
            <div
              class="c20 c21"
            >
              <span
                class="c22"
              >
                <img
                  alt=""
                  class="c23"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699954310/icons/efd3esaor6zqk7seh6kt.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
